pc - steps towards s22 starter for team02